<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.b_team.b_team_app.MainActivity">

    <item android:id="@+id/action_open_statistics"
        android:icon="@drawable/ic_assessment_black_24dp"
        android:title="@string/action_open_statistics"
        app:showAsAction="always" />

    <item android:id="@+id/action_add_book"
        android:icon="@drawable/ic_add_black_24dp"
        android:title="@string/action_add_book"
        app:showAsAction="always" />

    <item android:id="@+id/action_search"
    android:icon="@drawable/ic_search_black_24dp"
    android:title="@string/action_search"
    app:showAsAction="always" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
