<?xml version="1.0" encoding="UTF-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollViewEdit"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/scrollContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="10dp">

        <RelativeLayout
            android:id="@+id/textBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="@dimen/key_value_margin"
                android:text="@string/key_title"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

            <EditText
                android:id="@+id/editText_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/textView_title"
                android:layout_toRightOf="@+id/textView_title"
                android:inputType="text"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textView_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/editText_title"
                android:text="@string/key_author"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/editText_author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/editText_title"
                android:layout_below="@+id/editText_title"
                android:layout_toRightOf="@+id/textView_author"
                android:inputType="text"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <!--Ideally the author edit text should show all authors previously used as a autocomplete list.
            For that to work we need AutoCompleteTextViews instead of EditText. Also the BookEditActivity class needs
            to implement functions to fill that list.
            I haven't worked out yet how to use the BookProvider to get the required data, so we keep the EditTexts for now.
            -Moritz
        -->
            <!--
        <AutoCompleteTextView android:id="@+id/editText_author"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:inputType="textNoSuggestions" android:completionThreshold="1"
            android:layout_toRightOf="@+id/textView_author" android:layout_below="@+id/editText_title"
            android:layout_alignLeft="@id/editText_title"
            android:textAppearance="?android:attr/textAppearanceMedium"/>
        -->

            <TextView
                android:id="@+id/textView_isbn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/editText_author"
                android:text="@string/key_isbn"
                android:textAppearance="?android:attr/textAppearanceMedium" />


            <EditText
                android:id="@+id/editText_isbn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/editText_title"
                android:layout_below="@+id/editText_author"
                android:layout_toRightOf="@+id/textView_isbn"
                android:inputType="text"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textView_publisher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/editText_isbn"
                android:text="@string/key_publisher"
                android:textAppearance="?android:attr/textAppearanceMedium" />


            <EditText
                android:id="@+id/editText_publisher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/editText_title"
                android:layout_below="@+id/editText_isbn"
                android:layout_toRightOf="@+id/textView_publisher"
                android:inputType="text"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textView_nPages"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/editText_publisher"
                android:text="@string/key_nPages"
                android:textAppearance="?android:attr/textAppearanceMedium" />


            <EditText
                android:id="@+id/editText_nPages"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/editText_title"
                android:layout_below="@+id/editText_publisher"
                android:layout_toRightOf="@+id/textView_nPages"
                android:inputType="number"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textView_nVolume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/editText_nPages"
                android:text="@string/key_nVolume"
                android:textAppearance="?android:attr/textAppearanceMedium" />


            <EditText
                android:id="@+id/editText_nVolume"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/editText_title"
                android:layout_below="@+id/editText_nPages"
                android:layout_toRightOf="@+id/textView_nVolume"
                android:inputType="number"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textView_genreLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/editText_nVolume"
                android:text="@string/key_genre"
                android:textAppearance="?android:attr/textAppearanceMedium" />


            <EditText
                android:id="@+id/editText_genre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/editText_title"
                android:layout_below="@+id/editText_nVolume"
                android:layout_toRightOf="@+id/textView_genreLabel"
                android:inputType="text"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textView_ownership"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/editText_genre"
                android:text="@string/key_ownership"
                android:textAppearance="?android:attr/textAppearanceMedium" />


            <EditText
                android:id="@+id/editText_ownership"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/editText_title"
                android:layout_below="@+id/editText_genre"
                android:layout_toRightOf="@+id/textView_ownership"
                android:inputType="none|text"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textView_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/editText_ownership"
                android:text="@string/key_rating"
                android:textAppearance="?android:attr/textAppearanceMedium" />


            <EditText
                android:id="@+id/editText_rating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/editText_title"
                android:layout_below="@+id/editText_ownership"
                android:layout_toRightOf="@+id/textView_rating"
                android:inputType="number"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </RelativeLayout>
        <android.support.constraint.ConstraintLayout
            android:id="@+id/readingStatuesBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textBox">

            <Switch
                android:id="@+id/switch_wantToRead"
                android:layout_width="wrap_content"
                android:layout_height="15dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView_wantToRead"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:text="Möchte ich noch lesen:"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                app:layout_constraintEnd_toStartOf="@+id/switch_wantToRead"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Switch
                android:id="@+id/switch_read"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView_wantToRead" />

            <TextView
                android:id="@+id/textView_read"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:text="Schon gelesen:"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                app:layout_constraintEnd_toStartOf="@+id/switch_read"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_wantToRead" />

            <Switch
                android:id="@+id/switch_currentlyReading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_read" />

            <TextView
                android:id="@+id/textView_currentlyReading"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="Lese ich gerade:"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                app:layout_constraintEnd_toStartOf="@+id/switch_currentlyReading"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView_read" />

            <android.support.constraint.ConstraintLayout
                android:id="@+id/layout_currentlyReadinBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView_currentlyReading">

                <TextView
                    android:id="@+id/textView_currentPage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="Aktuelle Seite:"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/editText_currentPage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toStartOf="@id/textView_maxPage"
                    app:layout_constraintStart_toEndOf="@id/textView_currentPage"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView_maxPage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:text="@string/bookedit_maxpage"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/editText_currentPage"
                    android:scaleY="4"
                    />


            </android.support.constraint.ConstraintLayout>


        </android.support.constraint.ConstraintLayout>

        <Button android:id="@+id/save" style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_alignParentRight="true" android:layout_below="@id/readingStatuesBox"
            android:layout_marginRight="21dp" android:layout_marginTop="13dp"
            android:text="@string/button_save" />

        <Button android:id="@+id/delete" style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/save" android:layout_alignBottom="@+id/save"
            android:layout_toLeftOf="@+id/save" android:text="@string/button_delete" />

        <Button android:id="@+id/cancel" style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/save" android:layout_alignBottom="@+id/save"
            android:layout_alignParentLeft="true" android:text="@string/button_cancel" />

    </RelativeLayout>

</ScrollView>